...
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/linearlayoutslidesfeedback"
        android:orientation="vertical"></LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="Submit"
        android:textColor="@android:color/white"
        android:background="@drawable/buttonbackground"
        android:id="@+id/slidesfeedbacksubmitbutton"
        android:layout_margin="5dp"
        android:textSize="10dp"/>

</LinearLayout>

