<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context="com.example.caffae.studentsc.Feedback.SlidesComponent.SlidesMainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:id="@+id/feedbackMainLinearLayout"
        android:orientation="horizontal">

        <fragment
            android:id="@+id/movie_fragment"
            android:name="com.example.caffae.studentsc.Feedback.SlidesComponent.SlidesDisplayFragment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:layout="@layout/fragment_slides" />

        <fragment
            android:id="@+id/movie_details_fragment"
            android:name="com.example.caffae.studentsc.Feedback.SlidesComponent.SlidesFeedbackfragment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:layout="@layout/fragment_slides_feedbackfragment" />
    </LinearLayout>

</FrameLayout>
